large refactor - from modes to two booleans.